# phonegentic

./: .clinerules  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
.cursor/rules/: flutter-ui-conventions.mdc  general-task-rules.mdc  outbound-call-timing.mdc  reference-implementation-pattern.mdc  static-server-deploy.mdc  ui-reference-first.mdc
lib/src/: exceptions.dart  rtc_session.dart  sip_ua_helper.dart  socket_transport.dart  ua.dart
phonegentic/: .gitignore  Makefile  README.md  build.env.example  check_onnx_ops.py  encode_voice.py  pubspec.yaml  run-debug.sh  run.sh  test_pocket_tts.py
phonegentic/docs/: THEMES.md
phonegentic/lib/: main.dart
phonegentic/linux/: CMakeLists.txt  README.md
phonegentic/macos/: Podfile
phonegentic/scripts/: download_models.sh  project_tools.sh
phonegentic/test/: widget_test.dart
phonegentic/tool/: ensure_credentials.dart
phonegentic/web/: index.html  manifest.json
phonegentic/windows/: CMakeLists.txt
phonegnetic/: .gitignore  README.md  pubspec.yaml
phonegnetic/lib/: main.dart
phonegnetic/linux/: CMakeLists.txt
phonegnetic/scripts/: project_tools.sh
phonegnetic/test/: widget_test.dart
phonegnetic/web/: index.html  manifest.json
phonegnetic/windows/: CMakeLists.txt
plans/: kokoro-model-conversion-linux.md  kokoro-tts-linux.md  platform-agnostic-text-llm.md
static/: DEPLOY.md  boostrap_server.sh  help.html  index.html  privacy.html  sms-opt-in.html  sms-opt-out.html  terms.html
static/static_server/: .env.example  Cargo.toml
static/static_server/src/: main.rs
(+391 files in other folders)
