[package]
name = "static_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "form", "json", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
